# logistic_regression

./: README.md  pyproject.toml
src/logistic_regression/: homework.ipynb
src/logistic_regression/dmia/: gradient_check.py  utils.py
src/logistic_regression/dmia/classifiers/: __init__.py  logistic_regression.py
